- reworked ReconnectMethod:  * global settings for retrycount, waittime and waitforipcheck  * global method doReconnect(), every method have to implement the runCommands() method, which is the heart of a reconnect method -- should be checked to be sure, that i didn't damaged anything

--- a/trunk/ressourcen/jd/languages/english.lng
+++ b/trunk/ressourcen/jd/languages/english.lng
@@ -229,13 +229,10 @@ gui.config.liveheader.btnfindip = Fetch Router IP
 gui.config.liveheader.dialog.importrouter = Import router
 gui.config.liveheader.password = Password
 gui.config.liveheader.progress.message = jDownloader searches for your router settings
-gui.config.liveheader.retries = Max. retries (-1 = no limit)
 gui.config.liveheader.routerip = Router IP
 gui.config.liveheader.script = HTTP Script
 gui.config.liveheader.selectrouter = Select Router
 gui.config.liveheader.user = Login
-gui.config.liveheader.waitforip = Wait for new IP (sec)
-gui.config.liveheader.waittimeforipcheck = Firs IP check timeout (sec)
 gui.config.liveheader.warning.nocurlconvert = JD can't convert the CURL script. Please ask the JD-Support-Team for support!
 gui.config.liveheader.warning.notfound = jDownloader can't detect your router settings.
 gui.config.liveheader.warning.upnpinactive = Please activate Upnp support in your router's network configuration. <br><a href=\"http://%s\">Go to Router</a><br><a href=\"http://jdownloader.org/knowledge/wiki/reconnect/upnp\">Wiki article: Upnp in Router</a><br>Click OK when you activate Upnp support in router or Cancel to skip.
@@ -436,14 +433,14 @@ gui.menu.action.about.accel = CTRL+F1
 gui.menu.action.about.desc = About JDownloader
 gui.menu.action.about.mnem = A
 gui.menu.action.about.name = About JDownloader
-gui.menu.action.backup.desc = Create a linklist Backup
-gui.menu.action.backup.name =Backup
-gui.menu.action.backup.mnem =B
-gui.menu.action.backup.accel =CTRL+B
 gui.menu.action.add.accel = CTRL+V
 gui.menu.action.add.desc = Adds one or more download links
 gui.menu.action.add.mnem = H
 gui.menu.action.add.name = Add links
+gui.menu.action.backup.accel = CTRL+B
+gui.menu.action.backup.desc = Create a linklist Backup
+gui.menu.action.backup.mnem = B
+gui.menu.action.backup.name = Backup
 gui.menu.action.changes.accel = CTRL+SHIFT+C
 gui.menu.action.changes.desc = Show latest changes
 gui.menu.action.changes.mnem = C
@@ -570,6 +567,7 @@ gui.packageinfo.packagesize = Packagesize
 gui.packageinfo.password = Password
 gui.packageinfo.rate = Refreshrate
 gui.packageinfo.title = Package Information: 
+gui.plugins.decrypt.askclicknload = The decrypter %s seems to be outdated, but supports Click'n'Load. Open the website now?
 gui.reconnect.confirm = Do you want to reconnect your connection?
 gui.reconnect.failed = Reconnect failed
 gui.reconnect.success = Reconnect successfull
@@ -655,16 +653,9 @@ installer.welcome = Welcome to JDownloader. The setup program will download some
 interaction.batchreconnect.batch = Batch Script
 interaction.batchreconnect.dooutput = Write result to a log file
 interaction.batchreconnect.executein = Start in (application folder)
-interaction.batchreconnect.progress.0_title = Batch Reconnect
-interaction.batchreconnect.progress.1_retries = Batch Reconnect #
-interaction.batchreconnect.progress.2_oldip = Batch Reconnect Old IP:
-interaction.batchreconnect.progress.3_ipcheck = Batch Reconnect New IP: %s / %s
-interaction.batchreconnect.retries = Max repeats (-1 = no limit)
 interaction.batchreconnect.terminal = Interpreter
 interaction.batchreconnect.tostring = Batch Reconnect parameters
-interaction.batchreconnect.waitforip = Wait for new IP (sec)
 interaction.batchreconnect.waitfortermination = Time to wait for command termination (sec)
-interaction.batchreconnect.waittimetofirstipcheck = Fist IP Check wait time (sec)
 interaction.externexecute.cmd = Command (use absolut directory paths)
 interaction.externexecute.disable = Disable event
 interaction.externexecute.executein = Start in (application folder)
@@ -675,31 +666,16 @@ interaction.externexecute.tostring = Execute external application
 interaction.externexecute.variables = Avaiable variables
 interaction.externexecute.waitfortermination = Timeout for cmd execution (sec)
 interaction.externreconnect.command = Command (use absolut directory paths)
-interaction.externreconnect.name = Extern reconnect
 interaction.externreconnect.parameter = Parameter (1 parameter every line)
-interaction.externreconnect.progress.0_title = ExternReconnect
-interaction.externreconnect.progress.1_retries = ExternReconnect #
-interaction.externreconnect.progress.2_oldip = ExternReconnect old IP:
-interaction.externreconnect.progress.3_ipcheck = ExternReconnect new IP: %s / %s
-interaction.externreconnect.retries = Max. retries (-1 = endless)
 interaction.externreconnect.tostring = Execute external reconnect application
-interaction.externreconnect.waitforip = Timeout new IP (sec)
 interaction.externreconnect.waitfortermination = Timeout for cmd execution (sec)
-interaction.externreconnect.waittimetofirstipcheck = Timeout for first IP-Check (sec)
 interaction.jdchat.deslanguage = to: 
 interaction.jdchat.native = to: 
 interaction.jdexit.name = Exit jD
 interaction.liveheader.name = HTTP LiveHeader
-interaction.liveheader.progress.0_title = HTTP LiveHeader Reconnect
-interaction.liveheader.progress.1_retry = HTTP LiveHeader #1
-interaction.liveheader.progress.2_ip = (IP) HTTP LiveHeader :
 interaction.liveheader.progress.3_step = (Step) HTTP LiveHeader :
 interaction.liveheader.progress.4_step = (%s) HTTP LiveHeader
-interaction.liveheader.progress.5_ipcheck = (IP check)HTTP LiveHeader %s / %s
-interaction.liveheader.progress.5_ipcheck_emergency = (IPCHECK EMERGENCY)HTTPLiveHeader %s / %s
-interaction.liveheader.progress.5_wait = (Wait) HTTP LiveHeader
 interaction.packagemanager.name = Update packages
-interaction.reconnect.ipfiltered.warning.short = The IP %s is not allowed
 interaction.resetlink.name = Reset Download Link (Attention: File will be deleted!)
 interaction.resetlink.options.all = All Links
 interaction.resetlink.options.lastlink = Only Last Link
@@ -789,6 +765,7 @@ modules.reconnect.types.batch = Batch
 modules.reconnect.types.clr = CLR Script
 modules.reconnect.types.extern = External
 modules.reconnect.types.liveheader = LiveHeader/Curl
+plugin.optional.jdchat.getlog = %s needs a log to solve your problem. Do you agree to send him the Log?
 plugin.optional.jdchat.teamviewer.yourtvdata = Your Teamviewer logins:
 plugin.rapidshare.error.accountnotfound = Your Premium Account has not been found.
 plugin.rapidshare.error.filetolarge = This file is larger than 200 MB, you need a premium-account to download this file.
@@ -802,6 +779,7 @@ plugin.system.notloaded = idle
 plugins.config.premium.accountnum = <html><b>Premium Account #%s</b></html>
 plugins.config.premium.chartapi.caption.error = %s loading or not available
 plugins.config.premium.chartapi.maxtraffic = Max. Traffic to collect
+plugins.config.premium.globaldeactiv = <html><b>Global disabled</b></html>
 plugins.config.premium.password = Password
 plugins.config.premium.test = Get Status
 plugins.config.premium.user = Premium User
@@ -1135,6 +1113,13 @@ plugins.trayicon.popup.menu.toggleclipboard = Enable/Disable monitor clipboard
 plugins.trayicon.popup.menu.togglereconnect = Enable/Disable reconnect
 plugins.trayicon.popup.menu.update = Execute update
 plugins.trayicon.popup.title = JDownloader
+reconnect.ipfiltered.warning.short = The IP %s is not allowed!
+reconnect.progress.1_retries = Reconnect #
+reconnect.progress.2_oldip = Reconnect Old IP:
+reconnect.progress.3_ipcheck = Reconnect New IP: %s / %s
+reconnect.retries = Max repeats (-1 = no limit)
+reconnect.waitforip = Wait for new IP (sec)
+reconnect.waittimetofirstipcheck = Fist IP Check wait time (sec)
 routerinfocollector.dialog.msg = <b>To improve the automated Router and Reconnect detection, we collect routerinformation!</b><br>If you agree on uploading the given details of your router confirm with YES!
 routerinfocollector.dialog.title = Please help us to improve the automatic routerdetection.
 showcaptcha.choose.file = Select a Imagefile
@@ -1181,6 +1166,3 @@ train.choose.folder = Select a folder
 train.chooser.title = jDownloader :: TrainAll
 train.method = Select a Captchamethod
 wrapper.webupdate.updatefile = Update plugin %s
-jdownloader.localnewsurl =http://jdownloader.org/news?lng=en
-gui.plugins.decrypt.askclicknload= The decrypter %s seems to be outdated, but supports Click'n'Load. Open the website now?
-gui.droptarget.grabbed= Grabbed:
