--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -229,13 +229,10 @@ gui.config.liveheader.btnfindip = Router IP ermitteln
 gui.config.liveheader.dialog.importrouter = Router importieren
 gui.config.liveheader.password = Login Passwort (->%%%pass%%%)
 gui.config.liveheader.progress.message = jDownloader sucht nach Ihren Routereinstellungen
-gui.config.liveheader.retries = Max. Wiederholungen (-1 = unendlich)
 gui.config.liveheader.routerip = RouterIP (->%%%routerip%%%)
 gui.config.liveheader.script = HTTP Script
 gui.config.liveheader.selectrouter = Router auswählen
 gui.config.liveheader.user = Login User (->%%%user%%%)
-gui.config.liveheader.waitforip = Auf neue IP warten [sek]
-gui.config.liveheader.waittimeforipcheck = Wartezeit bis zum ersten IP-Check [sek]
 gui.config.liveheader.warning.nocurlconvert = jDownloader konnte dieses CURL Script nicht konvertieren.
 gui.config.liveheader.warning.notfound = jDownloader konnte ihre Routereinstellung nicht automatisch ermitteln.
 gui.config.liveheader.warning.upnpinactive = Bitte aktivieren sie fals vorhanden Upnp in den Netzwerkeinstellungen ihres Routers <br><a href=\"http://%s\">zum Router</a><br><a href=\"http://wiki.jdownloader.org/index.php?title=Router_Upnp\">Wikiartikel: Upnp Routern</a><br>drücken sie Ok wenn sie Upnp aktiviert haben oder abbrechen wenn sie fortfahren wollen!
@@ -432,14 +429,14 @@ gui.menu.action.about.accel = CTRL+F1
 gui.menu.action.about.desc = Über JDownloader
 gui.menu.action.about.mnem = A
 gui.menu.action.about.name = Über JDownloader
-gui.menu.action.backup.desc = Linklisten Backup erstellen
-gui.menu.action.backup.name =Backup
-gui.menu.action.backup.mnem =B
-gui.menu.action.backup.accel =CTRL+B
 gui.menu.action.add.accel = CTRL+V
 gui.menu.action.add.desc = Einen oder mehrere Downloadlinks hinzufügen
 gui.menu.action.add.mnem = H
 gui.menu.action.add.name = Links hinzufügen
+gui.menu.action.backup.accel = CTRL+B
+gui.menu.action.backup.desc = Linklisten Backup erstellen
+gui.menu.action.backup.mnem = B
+gui.menu.action.backup.name = Backup
 gui.menu.action.changes.accel = CTRL+SHIFT+C
 gui.menu.action.changes.desc = Zeige letzte Änderungen
 gui.menu.action.changes.mnem = C
@@ -558,6 +555,7 @@ gui.packageinfo.packagesize = Paketgröße
 gui.packageinfo.password = Passwort
 gui.packageinfo.rate = Aktualisierungsrate
 gui.packageinfo.title = Paket Informationen:
+gui.plugins.decrypt.askclicknload = Das Decryptplugin für "%s" ist veraltet, aber unterstützt Click'N'Load.\r\nSoll die Click'n'Load Seite jetzt geöffnet werden?
 gui.reconnect.confirm = Wollen Sie sicher eine neue Verbindung aufbauen?
 gui.reconnect.failed = Reconnect fehlgeschlagen
 gui.reconnect.success = Reconnect erfolgreich
@@ -642,16 +640,9 @@ installer.welcome = Willkommen bei jDownloader. Aktualisiere fehlende Dateien.
 interaction.batchreconnect.batch = Batch Script
 interaction.batchreconnect.dooutput = Rückgaben im Log anzeigen
 interaction.batchreconnect.executein = Ausführen in (Ordner der Anwendung)
-interaction.batchreconnect.progress.0_title = Batch Reconnect
-interaction.batchreconnect.progress.1_retries = BatchReconnect #
-interaction.batchreconnect.progress.2_oldip = BatchReconnect Old IP:
-interaction.batchreconnect.progress.3_ipcheck = BatchReconnect New IP: %s / %s
-interaction.batchreconnect.retries = Max. Wiederholungen (-1 = unendlich)
 interaction.batchreconnect.terminal = Interpreter
 interaction.batchreconnect.tostring = Batch Reconnect durchführen
-interaction.batchreconnect.waitforip = Auf neue IP warten [sek]
 interaction.batchreconnect.waitfortermination = Wartezeit bis der Befehl beendet ist [sek]
-interaction.batchreconnect.waittimetofirstipcheck = Wartezeit bis zur ersten IP-Überprüfung [sek]
 interaction.externexecute.cmd = Befehl (absolute Pfade verwenden)
 interaction.externexecute.disable = Event deaktiviert
 interaction.externexecute.executein = Ausführen in (Ordner der Anwendung)
@@ -662,30 +653,16 @@ interaction.externexecute.tostring = Externes Programm aufrufen
 interaction.externexecute.variables = Verfügbare Parameter
 interaction.externexecute.waitfortermination = Warten x Sekunden bis Befehl beendet ist [sek] (-1 für unendlich)
 interaction.externreconnect.command = Befehl (absolute Pfade verwenden)
-interaction.externreconnect.name = Externer Reconnect
 interaction.externreconnect.parameter = Parameter (1 Parameter/Zeile)
-interaction.externreconnect.progress.0_title = ExternReconnect
-interaction.externreconnect.progress.1_retries = ExternReconnect #
-interaction.externreconnect.progress.2_oldip = ExternReconnect Old IP:
-interaction.externreconnect.progress.3_ipcheck = ExternReconnect New IP: %s / %s
-interaction.externreconnect.retries = Max. Wiederholungen (-1 = unendlich)
 interaction.externreconnect.tostring = Externes Reconnectprogramm aufrufen
-interaction.externreconnect.waitforip = Auf neue IP warten [sek]
 interaction.externreconnect.waitfortermination = Warten x Sekunden bis Befehl beendet ist [sek]
-interaction.externreconnect.waittimetofirstipcheck = Wartezeit bis zum ersten IP-Check [sek]
 interaction.jdchat.deslanguage = in:
 interaction.jdchat.native = in:
 interaction.jdexit.name = Beenden
 interaction.liveheader.name = HTTP Live Header
-interaction.liveheader.progress.0_title = HTTPLiveHeader Reconnect
-interaction.liveheader.progress.1_retry = HTTPLiveHeader #
-interaction.liveheader.progress.2_ip = IP
 interaction.liveheader.progress.3_step = Schritt
 interaction.liveheader.progress.4_step = Schritt %s
-interaction.liveheader.progress.5_ipcheck = IP Überprüfung
-interaction.liveheader.progress.5_wait = Auf Router/Modem warten
 interaction.packagemanager.name = Pakete aktualisieren
-interaction.reconnect.ipfiltered.warning.short = Die IP %s wurde als nicht erlaubt identifiziert
 interaction.resetlink.name = Downloadlink zurücksetzen (Achtung: Datei wird gelöscht!)
 interaction.resetlink.options.all = alle Links
 interaction.resetlink.options.lastlink = nur den letzten Link
@@ -732,6 +709,7 @@ interaction.trigger.package_finished.desc = Wird aufgerufen wenn ein Paket ferti
 interaction.trigger.single_download_failed = Download fehlgeschlagen
 interaction.trigger.single_download_failed.desc = Wird aufgerufen wenn ein Download wegen Fehlern abgebrochen wurde
 jd.plugins.decrypt.bestmovies.captchainputwrong = Falsche Eingabe, Zeit bitte wie folgt eingeben: 4:30
+jdownloader.localnewsurl = http://jdownloader.org/news/index
 jdownloader.org = jDownloader.org
 linkinformation.available.error = Fehler!
 linkinformation.download.aborted = Abgebrochen
@@ -786,6 +764,7 @@ plugin.system.notloaded = ~
 plugins.config.premium.accountnum = <html><b>Premium Account #%s</b></html>
 plugins.config.premium.chartapi.caption.error = %s wird geladen oder ist nicht verfügbar
 plugins.config.premium.chartapi.maxtraffic = Max. sammelbarer Traffic
+plugins.config.premium.globaldeactiv = <html><b>Global deaktiviert</b></html>
 plugins.config.premium.password = Passwort
 plugins.config.premium.test = Status holen
 plugins.config.premium.user = Premium Benutzer
@@ -1114,6 +1093,13 @@ plugins.trayicon.popup.menu.toggleclipboard = Zwischenablage an/aus
 plugins.trayicon.popup.menu.togglereconnect = Reconnect an/aus
 plugins.trayicon.popup.menu.update = JD aktualisieren
 plugins.trayicon.popup.title = JDownloader
+reconnect.ipfiltered.warning.short = Die IP %s wurde als nicht erlaubt identifiziert!
+reconnect.progress.1_retries = Reconnect #
+reconnect.progress.2_oldip = Reconnect - Alte IP:
+reconnect.progress.3_ipcheck = Reconnect - Neue IP: %s / %s
+reconnect.retries = Max. Wiederholungen (-1 = unendlich)
+reconnect.waitforip = Auf neue IP warten [sek]
+reconnect.waittimetofirstipcheck = Wartezeit bis zur ersten IP-Überprüfung [sek]
 routerinfocollector.dialog.msg = <b>Um die automatische Routererkennung zu verbessern sammeln wir Routerinformationen!</b><br>Wenn sie damit einverstanden sind die Informationen aus den Details an unseren Server zu übermitteln bestätigen sie mit ja!
 routerinfocollector.dialog.title = Helfen sie die Routererkennung zu verbessern
 showcaptcha.choose.file = Wählen sie eine Bilddatei aus
@@ -1159,6 +1145,3 @@ train.choose.folder = Wählen sie einen Ordner aus
 train.chooser.title = jDownloader - Train All
 train.method = Wählen Sie eine Methode aus:
 wrapper.webupdate.updatefile = Plugin %s aktualisieren
-jdownloader.localnewsurl =http://jdownloader.org/news?lng=de
-gui.plugins.decrypt.askclicknload= Das Decryptplugin für "%s" ist veraltet, aber unterstützt Click'N'Load.\r\nSoll die Click'n'Load Seite jetzt geöffnet werden?
-gui.droptarget.grabbed= Grabbed:
