--- a/trunk/ressourcen/jd/languages/Polski.lng
+++ b/trunk/ressourcen/jd/languages/Polski.lng
@@ -231,13 +231,10 @@ gui.config.liveheader.btnfindip = Przenieś IP routera
 gui.config.liveheader.dialog.importrouter = Importuj router
 gui.config.liveheader.password = Hasło
 gui.config.liveheader.progress.message = JDownloader wyszukuje ustawienia routera
-gui.config.liveheader.retries = Maksymalna ilość prób (-1 = bez ograniczeń)
 gui.config.liveheader.routerip = IP Routera
 gui.config.liveheader.script = Skrypt HTTP
 gui.config.liveheader.selectrouter = Wybierz router
 gui.config.liveheader.user = Użytkownik
-gui.config.liveheader.waitforip = Czekaj na nowy adres IP (sek.)
-gui.config.liveheader.waittimeforipcheck = Interwał sprawdzania zmiany adresu IP (co x sek.)
 gui.config.liveheader.warning.nocurlconvert = JD nie może skonwertować skryptu CURL. Aby uzyskać pomoc, skontaktuj się z Ekipą Wsparcia Techniczjego JD!
 gui.config.liveheader.warning.notfound = JDownloader nie może wykryć ustawień twojego routera.
 gui.config.liveheader.warning.upnpinactive = Włącz obsługę Upnp w ustawieniach swojego routera.<br><a href=\"http://%s\">Do Rutera</a><br><a href=\"http://jdownloader.org/knowledge/wiki/reconnect/upnp\">Wiki: Upnp w routerze</a><br>Klknij OK, gdy Upnp zostanie włączone lub anuluj by przejść dalej!
@@ -658,16 +655,9 @@ installer.welcome = Witamy w programie JDownloader. Pobierz brakujące pliki.
 interaction.batchreconnect.batch = Skrypt wsadowy
 interaction.batchreconnect.dooutput = Zapisz wynik do pliku dziennika
 interaction.batchreconnect.executein = Uruchom w (folder aplikacji)
-interaction.batchreconnect.progress.0_title = Ponowne połączenie wsadowe
-interaction.batchreconnect.progress.1_retries = Ponowne połączenie wsadowe #
-interaction.batchreconnect.progress.2_oldip = Ponowne połączenie wsadowe starego IP:
-interaction.batchreconnect.progress.3_ipcheck = Ponowne połączenie wsadowe nowego IP: %s / %s
-interaction.batchreconnect.retries = Maksymalna ilość powtórzeń (-1 = bez ograniczeń)
 interaction.batchreconnect.terminal = Interpreter
 interaction.batchreconnect.tostring = Ponowne połączenie wsadowe - parametry
-interaction.batchreconnect.waitforip = Czekaj na nowe IP (sek.)
 interaction.batchreconnect.waitfortermination = Czas na zakończenie polecenia (sek.)
-interaction.batchreconnect.waittimetofirstipcheck = Czas pierwszego sprawdzenia IP (sek.)
 interaction.externexecute.cmd = Lokalizacja (użyj bezpośredniej lokalizacji)
 interaction.externexecute.disable = Wyłącz zdarzenie
 interaction.externexecute.executein = uruchom w (folder aplikacji)
@@ -678,31 +668,16 @@ interaction.externexecute.tostring = Uruchom zewnętrzną aplikację
 interaction.externexecute.variables = Dostępne zmienne
 interaction.externexecute.waitfortermination = Czas na wykonanie polecenia (sek.)
 interaction.externreconnect.command = Lokalizacja (użyj bezpośredniej lokalizacji pliku)
-interaction.externreconnect.name = Zewnętrzne ponowne nawiązywanie połączenia
 interaction.externreconnect.parameter = Parametr (1 parametr na 1 wiersz)
-interaction.externreconnect.progress.0_title = Zewnętrzne ponowne naw. poł.
-interaction.externreconnect.progress.1_retries = Zewnętrzne ponowne naw. poł. #
-interaction.externreconnect.progress.2_oldip = Zewnętrzne ponowne naw. poł. dla starego IP:
-interaction.externreconnect.progress.3_ipcheck = Zewnętrzne ponowne naw. poł. dla nowego IP: %s / %s
-interaction.externreconnect.retries = Ilość prób (-1 = bez ograniczeń)
 interaction.externreconnect.tostring = Uruchom zewnętrzną aplikację do ponownego naw. poł.
-interaction.externreconnect.waitforip = Czas na nowe IP (sek.)
 interaction.externreconnect.waitfortermination = Czas na wykonanie rozłączenia (sek.)
-interaction.externreconnect.waittimetofirstipcheck = Czas na na pierwsze sprawdzenie IP (sec)
 interaction.jdchat.deslanguage = na: 
 interaction.jdchat.native = na: 
 interaction.jdexit.name = Wyjdź z jD
 interaction.liveheader.name = HTTP LiveHeader
-interaction.liveheader.progress.0_title = Ponowne nawiązywanie połączenia HTTP LiveHeader
-interaction.liveheader.progress.1_retry = HTTP LiveHeader #1
-interaction.liveheader.progress.2_ip = (IP) HTTP LiveHeader :
 interaction.liveheader.progress.3_step = (Krok) HTTP LiveHeader :
 interaction.liveheader.progress.4_step = (%s) HTTP LiveHeader
-interaction.liveheader.progress.5_ipcheck = (Sprawdzanie IP)HTTP LiveHeader %s / %s
-interaction.liveheader.progress.5_ipcheck_emergency = (Awaryjne sprawdzanie IP)HTTP LiveHeader %s / %s
-interaction.liveheader.progress.5_wait = (Oczekiwanie) HTTP LiveHeader
 interaction.packagemanager.name = Aktualizacja pakietu
-interaction.reconnect.ipfiltered.warning.short = IP %s jest niewłaściwe
 interaction.resetlink.name = Resetuj Link pobierania
 interaction.resetlink.options.all = Wszystkie linki
 interaction.resetlink.options.lastlink = Tylko ostatni link
@@ -1141,6 +1116,10 @@ plugins.trayicon.popup.menu.toggleclipboard = Włącz/Wyłącz monitorowanie sch
 plugins.trayicon.popup.menu.togglereconnect = Włącz/Wyłącz ponowne połączenie
 plugins.trayicon.popup.menu.update = Uruchom Aktualizację
 plugins.trayicon.popup.title = JDownloader
+reconnect.ipfiltered.warning.short = IP %s jest niewłaściwe
+reconnect.retries = Maksymalna ilość powtórzeń (-1 = bez ograniczeń)
+reconnect.waitforip = Czekaj na nowe IP (sek.)
+reconnect.waittimetofirstipcheck = Czas pierwszego sprawdzenia IP (sek.)
 routerinfocollector.dialog.msg = <b>By ułatwić automatyczną konfigurację routerów zbieramy informacje o nich!</B> Jeśli zgadzasz się na wysłanie informacji o Twoim routerze na nasz serwer, wybierz TAK!
 routerinfocollector.dialog.title = Pomóż w zbieraniu informacji o routerach
 showcaptcha.choose.file = Wybierz pliku obrazka
