Polish translation file update.

--- a/trunk/ressourcen/jd/languages/Polski.lng
+++ b/trunk/ressourcen/jd/languages/Polski.lng
@@ -840,7 +840,12 @@ plugins.errors.pluginerror = Błąd wtyczki. Powiadom Wsparcie Techniczne.
 plugins.errors.uploadedto.premiumtrafficreached = Osiągnięto limit ruchu
 plugins.errors.wrongpassword = Błędne hasło
 plugins.host.dosyakaydet.breakcaptcha = Oczekiwanie na odczyt kodu Captcha
+plugins.host.megaupload.captchamode.title = Tryb obsługi kodów Captcha:
+plugins.host.megaupload.captchamode_auto = Automatyczny
+plugins.host.megaupload.captchamode_no_captcha = Unikaj wpisywania kodów
+plugins.host.megaupload.captchamode_no_reconnect = Unikaj ponownych połączeń
 plugins.host.megaupload.getpassword = Podaj hasło dla %s
+plugins.host.megaupload.ports = Użyj tego portu:
 plugins.host.megaupload.pw_wring = Niepoprawne hasło
 plugins.host.meinupload.serverdefect = Usługa niedostępna
 plugins.host.premium.info.cash = Gotówka
