Tr language update , sorry for the latency been busy :)

--- a/trunk/ressourcen/jd/languages/Turkish.lng
+++ b/trunk/ressourcen/jd/languages/Turkish.lng
@@ -7,7 +7,7 @@ addons.jdlowspeed.statusmessage.enabled = Etkinleştir
 addons.jdshutdown.menu = JD-Sistem Kapatma
 addons.jdshutdown.menu.disable = Devredışı bırak
 addons.jdshutdown.menu.enable = Etkinleştir
-addons.jdshutdown.run = sistemi şimdi kapat
+addons.jdshutdown.run = Sistemi şimdi kapat
 addons.jdshutdown.statusmessage.disabled = Tüm indirmeler bittiğinde yada durdurulduğunda sisteminiz kapatılmayacak !
 addons.jdshutdown.statusmessage.enabled = Tüm indirmeler bittiğinde yada durdurulduğunda sisteminiz kapatılacak !
 addons.schedule.menu.add = Ekle
@@ -123,6 +123,7 @@ gui.config.btn_fengshui = Basit Görünüm
 gui.config.btn_restart = Kaydet ve Yeniden Başlat
 gui.config.captcha.jac_disable = Otomatik captcha algılamayı devre dışı bırak
 gui.config.captcha.train.level = Karar Eşiği
+gui.config.captcha.train.level.instanthelp = http://jdownloader.org/wiki/index.php?title=Captchafenster_abschalten_%26_Anzeigeschwelle
 gui.config.captcha.train.show_timeout = Captcha penceresi geri sayım (san) 
 gui.config.clr.script = CLR Script
 gui.config.download.autoresume = Tekrar bağlan sürdürebilen indirmeleri kesebilsin
@@ -173,6 +174,7 @@ gui.config.fengshui.rdmanual = El İle
 gui.config.fengshui.rdname = Router Algılama:
 gui.config.fengshui.settings = Ayarlar
 gui.config.fengshui.title = Feng Shui Ayarları
+gui.config.general.changelog.auto = Güncellemeden sonra değişiklikleri göster
 gui.config.general.createsubfolders = İndirilen paket için adını içeren Alt-klasör yarat
 gui.config.general.downloaddirectory = İndirme klasorü
 gui.config.general.filelogger = Günlüğü burda oluştur ./logs/ directory
@@ -267,10 +269,12 @@ gui.config.plugin.optional.statusactive = Açık
 gui.config.plugin.optional.statusınactive = Kapalı
 gui.config.popup.title = Yapılandırma
 gui.config.reconnect.name = Tekrar Bağlan
+gui.config.reconnect.showupload = Tekrar bağlan karşıya yükleme penceresini  göster
 gui.config.reloadcontainer = jD ile indirilen Konteyner otomatik yüklensin
 gui.config.routeripfinder = Router IP arama
 gui.config.routeripfinder.close = Çıkış
 gui.config.routeripfinder.featchıp = Router IP aranıyor...
+gui.config.routeripfinder.notfound = Routerınızın sunucu adı bulunamadı
 gui.config.routeripfinder.ready = IP bulundu: %s
 gui.config.showcontaineronloadınfo = Yüklerken detaylı Konteyner bilgisi göster
 gui.config.showcontaineronloadınfo.helpurl = http://jdownloader.ath.cx/page.php?id=102
@@ -341,6 +345,7 @@ gui.downloadlink.errorpostprocess = [Başarısız] %s
 gui.downloadlink.errorpostprocess2 = çıkartma başarısız
 gui.downloadlink.finished = [Tamamlandı]
 gui.downloadlink.hosterwaittime = [Yeni IP için bekle]
+gui.downloadlink.plugindisabled = [Takmabirim devre dışı]
 gui.downloadlink.status.wait = Bekle %s [dak:san]
 gui.downloadlist.delete = Seçilen dosyalar listeden kaldırılsın mı?
 gui.downloadlist.delete_downloadlinks = Biten indirmeleri kaldır?
@@ -426,6 +431,7 @@ gui.linkinfo.download.activated = Etkin
 gui.linkinfo.download.deactivated = Devre dışı
 gui.linkinfo.download.notunderway = Yürütülmüyor
 gui.linkinfo.download.underway = Yürütülüyor
+gui.linkinfo.downloadstatus = İndirme Durumu
 gui.linkinfo.file = Dosya
 gui.linkinfo.filesize = Dosya Boyutu
 gui.linkinfo.package = Paket
@@ -584,6 +590,7 @@ gui.menu.remove = Kaldır
 gui.messages.outofmemoryerror = Bir hata algılandı!\r\njDownloader için yeterli bellek yok ve yeniden başlatılması önerilir.\r\nLütfen bu hatayı bildirin!
 gui.packageinfo.comment = Açıklama
 gui.packageinfo.dldirectory = İndirme klasörü
+gui.packageinfo.extractafter = Otomatik Çıkart
 gui.packageinfo.links = Linkler (dosyalarınız)
 gui.packageinfo.loaded = Yüklenen
 gui.packageinfo.name = Adı
@@ -604,9 +611,10 @@ gui.splash.text.loadmodules = Modüller ve Eklentiler Yükleniyor
 gui.splash.text.loadplugins = Takma Birimler Yükleniyor
 gui.splash.text.update = Güncelleştirmeler Kontrol Ediliyor
 gui.splash.text.webupdate = Güncellemeler Kontrol Ediliyor
+gui.statusbar.interaction = Etkileşim:
 gui.statusbar.premium = Premium
 gui.statusbar.sim_ownloads = Mak.İnd
-gui.statusbar.speed = Hız
+gui.statusbar.speed = Mak.Hız
 gui.support.forumurl = http://jdownloader.org/knowledge/forum
 gui.support.wikiurl = http://wiki.jdownloader.org/index.php?title=Kategorie:Turkish_Wiki
 gui.tab.plugin_activity.column_plugin = Modül
@@ -626,6 +634,7 @@ gui.table.contextmenu.info = Detaylar
 gui.table.contextmenu.newpackage = Yeni Bir Pakete Taşı
 gui.table.contextmenu.packagesort = Dosyaları Sırala
 gui.table.contextmenu.packagesubmenu = Paket
+gui.table.contextmenu.priority = Öncelik
 gui.table.contextmenu.reset = Sıfırla
 gui.table.contextmenu.resume = Sürdür
 gui.table.draganddrop.after = Altına Yerleştir '%s'
@@ -644,6 +653,7 @@ gui.textcomponent.context.paste = Yapıştır
 gui.textcomponent.context.paste.acc = ctrl V
 gui.textcomponent.context.selectall = Tümünü seç
 gui.textcomponent.context.selectall.acc = ctrl A
+gui.titleaddaction = Eylem:
 gui.tooltip.statusbar.premium = Premium İndirmeler Açık/Kapalı
 gui.tooltip.statusbar.simultan_downloads = Aynı anda Mak.İndirme sayısı
 gui.tooltip.statusbar.speedlimiter = İndirme hız Limiti (kb/s) [0:limitsiz]
@@ -854,7 +864,10 @@ plugins.decrypt.serienjunkies.usepremiumlinks = Eğer mümkün ise premium linkl
 plugins.decrypt.speedysharecom.password = Parola Gir:
 plugins.decrypt.stealthto.captcha = Lütfen boşluktaki daireye tıklayın
 plugins.error.downloadfailed = İndirme başarısız
+plugins.errors.disconnect = Bağlantı koptu?
 plugins.errors.error = Hata:
+plugins.errors.hosteroffline = Barındırıcı çevirim dışı olabilir?
+plugins.errors.nointernetconn = İnternet bağlantısı yok galiba ?
 plugins.errors.pluginerror = Takmabirm hatası.JD-Desteğe bildirin.
 plugins.errors.uploadedto.premiumtrafficreached = Kota limitine ulaşıldı
 plugins.errors.wrongpassword = Hatalı parola
@@ -863,7 +876,6 @@ plugins.host.enterlinkpassword = Link parolasını girin lütfen
 plugins.host.fastload.browsererror = Bu Link , tarayıcıda açılamadı.
 plugins.host.fastload.errors = Tarayıcı ayarlarınız yanlış.
 plugins.host.fastload.info = fast-load.net'den ilk defa indiriyorsunuz.\r\nBu takmabirim farklı çalışır:\r\nBurdan indirmek için captcha'yı tarayıcınızda girmelisiniz.\r\nJD şimdi info URL açacak.
-
 plugins.host.fastload.prepare = Link onaylaması için bekle
 plugins.host.fastload.ticketmessage = Hızı 300kb/s ye çıkartmak için Fastload.net sürat bileti alın
 plugins.host.fastload.wait_ticketmessage = Sürat bileti için bekle
@@ -987,12 +999,15 @@ plugins.optional.jdunrar.config.passwordlist = Tüm parola listesi. Her satır i
 plugins.optional.jdunrar.config.passwordlist2 = Tüm parola listesi. Her satır için tek parola!.Varolan parola sayısı: %s
 plugins.optional.jdunrar.config.passwordtab = Parola Listesi
 plugins.optional.jdunrar.crcerrorin = Çıkartma:Başarısız(%s içinde CRC)
+plugins.optional.jdunrar.error.extrfailedcrc = Çıkartma:Başarısız (bilinmeyen dosyada CRC)
 plugins.optional.jdunrar.filefilter = RAR-Ciltlerini başlat
 plugins.optional.jdunrar.filefilter.extractto = Dizin
+plugins.optional.jdunrar.linkmenu.autoextract = Otomatik Çıkart
 plugins.optional.jdunrar.linkmenu.container = JDUnrar
 plugins.optional.jdunrar.linkmenu.extract = Çıkart
 plugins.optional.jdunrar.linkmenu.openextract = Dizini aç
 plugins.optional.jdunrar.linkmenu.openextract2 = Dizin aç (%s)
+plugins.optional.jdunrar.linkmenu.package.autoextract = Otomatik Çıkart
 plugins.optional.jdunrar.linkmenu.package.extract = Paketi Çıkart
 plugins.optional.jdunrar.linkmenu.setextract = Buraya çıkart...
 plugins.optional.jdunrar.menu.config = Ayarlar
@@ -1003,8 +1018,17 @@ plugins.optional.jdunrar.menu.queue.clear = / "Sırayı Kaldır
 plugins.optional.jdunrar.menu.queue.extract = / "Çıkart %s
 plugins.optional.jdunrar.menu.queue.start = / "Sırayı Başlat
 plugins.optional.jdunrar.menu.toggle = Etkinleştir
+plugins.optional.jdunrar.messages = Böyle bir yol bulunamadi: %s
 plugins.optional.jdunrar.name = JD-Unrar
 plugins.optional.jdunrar.progress.extractfile = Çıkart %s
+plugins.optional.jdunrar.status.crackingpass = Parola kırılıyor
+plugins.optional.jdunrar.status.extractfailed = Çıkartma başarısız
+plugins.optional.jdunrar.status.extractfailedcrc = Çıkartma başarısız (CRC hatası)
+plugins.optional.jdunrar.status.extractfailedpass = Çıkartma başarısız (Parola)
+plugins.optional.jdunrar.status.extracting = Çıkartılıyor
+plugins.optional.jdunrar.status.extractok = Çıkartma BAŞARILI!
+plugins.optional.jdunrar.status.openingarchive = Arşiv açılıyor
+plugins.optional.jdunrar.status.passfound = Parola bulundu
 plugins.optional.langfileeditor.addkey = Anahtar ekle
 plugins.optional.langfileeditor.adoptdefaults = Varsaylan(ları) benimse
 plugins.optional.langfileeditor.adoptdefaults.missing = Eksik girdilerin varsayılanını benimse
@@ -1213,6 +1237,7 @@ system.update.error.message = Bu paketler için güncelleme başarısız :
 system.update.error.message.infolink = %s v.%s <a href='%s'>INFO</a><br/>
 system.update.message.title = Bu sürüme güncellenmiş %s
 system.update.showchangelog = Tüm değişiklikler
+system.update.showchangelogv2 = Yenilikler?
 system.update.success.message = Yeni güncellemeler yüklendi<hr>%s
 system.update.success.message.infolink = %s v.%s <a href='%s'>INFO</a><br/>
 train.choose.folder = Klasör seç
